--- a/css/css/bootstrap-reboot.css
+++ b/css/css/bootstrap-reboot.css
@@ -17,6 +17,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -ms-overflow-style: scrollbar;
+  scroll-behavior: smooth;
   -webkit-tap-highlight-color: transparent; }
 
 @-ms-viewport {
